[project]
name = "lab-depth-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "ruff>=0.11.7",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
