[project]
name = "lab-depth-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "ruff>=0.11.7",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
